--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+     <uses-permission android:name="android.permission.INTERNET"/>
     <application
-        android:label="Al-Qur'an"
+        android:label="Muslim Apps"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
