--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   redux: ^5.0.0
   scrollable_positioned_list: ^0.3.8
   shared_preferences: ^2.2.2
-  slide_countdown: ^1.3.5
+  slide_countdown: ^1.5.0-dev.1
   vector_math: ^2.1.4
 
 dev_dependencies:
